# vibemux

./: .gitignore  CLAUDE.md  README.md  README_zh.md
.claude/: settings.local.json
.claude/skills/prd/: SKILL.md
.claude/skills/ralph/: SKILL.md
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  commands.rs  config.rs  events.rs  lib.rs  main.rs  models.rs  pty_host.rs  ring_buffer.rs  session_manager.rs
apps/desktop/src/assets/: fonts.css
apps/desktop/src/lib/: BusyIndicator.svelte  ContextMenu.svelte  Deck.svelte  DeckPane.svelte  HelpOverlay.svelte  MarkdownMessage.svelte  NewSessionPanel.svelte  Onboarding.svelte  OnboardingStep1.svelte  OnboardingStep2.svelte  OnboardingStep3.svelte  OnboardingStep4.svelte  OnboardingStep4Ai.svelte  SessionSearch.svelte  SettingsPanel.svelte  Shelf.svelte  ShelfCard.svelte  TerminalPane.svelte  Titlebar.svelte  colors.ts  deckLayout.ts  keymap.ts  presetThemes.ts  terminalReplay.ts  types.ts
docs/: PRD.md  RALPH_LOOP.md  Vibe99.md
scripts/ralph/: .last-branch  prd.json  progress.txt
scripts/ralph/archive/2026-04-13-ux-improvements/: prd-polish-improvements.md
scripts/ralph/archive/2026-04-13-vibemux-mvp/: prd.json  progress.txt
tasks/: prd-getting-start.md  prd-ux-improvements.md
