[package]
name = "vibemux-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "vibemux_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
which = "7"
libc = "0.2"
