[package]
name = "vibemux-desktop"
version = "0.1.0"
edition = "2021"
authors = ["CGH <yoko19191@github.com>"]
description = "A keyboard-first terminal multiplexer for vibe coding"
homepage = "https://github.com/yoko19191/vibemux"
repository = "https://github.com/yoko19191/vibemux"

[lib]
name = "vibemux_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
portable-pty = "0.9"
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
which = "7"
libc = "0.2"
